--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,9 @@
 pandas==1.0.5
 bokeh==2.1.0
 dill
-flask
-jinja2
-pip
+flask==1.1.2
+jinja2==2.11.2
+pip==20.1.1
 simplejson==3.17.0
 gunicorn==19.9.0
 requests==2.20.0
