--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,4 @@
 wheel
-piptools
 python-language-server[all]
 pandas==1.0.5
 bokeh==2.1.0
@@ -11,3 +10,54 @@ simplejson==3.17.0
 gunicorn==19.9.0
 requests==2.20.0
 quandl==3.5.0
+astroid==2.4.2
+autopep8==1.5.4
+bokeh==2.1.0
+certifi==2020.6.20
+chardet==3.0.4
+click==7.1.2
+dill==0.3.2
+flake8==3.8.3
+Flask==1.1.2
+gunicorn==19.9.0
+idna==2.7
+inflection==0.5.0
+isort==4.3.21
+itsdangerous==1.1.0
+jedi==0.17.2
+Jinja2==2.11.2
+lazy-object-proxy==1.4.3
+MarkupSafe==1.1.1
+mccabe==0.6.1
+more-itertools==8.4.0
+numpy==1.19.1
+packaging==20.4
+pandas==1.0.5
+parso==0.7.1
+Pillow==7.2.0
+pkg-resources==0.0.0
+pluggy==0.13.1
+pycodestyle==2.6.0
+pydocstyle==5.0.2
+pyflakes==2.2.0
+pylint==2.5.3
+pyparsing==2.4.7
+python-dateutil==2.8.1
+python-jsonrpc-server==0.3.4
+python-language-server==0.34.1
+pytz==2020.1
+PyYAML==5.3.1
+Quandl==3.5.0
+requests==2.20.0
+rope==0.17.0
+simplejson==3.17.0
+six==1.15.0
+snowballstemmer==2.0.0
+toml==0.10.1
+tornado==6.0.4
+typing-extensions==3.7.4.2
+ujson==1.35
+urllib3==1.24.3
+Werkzeug==1.0.1
+wrapt==1.12.1
+yapf==0.30.0
